# hng-14-3-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
insighta/: __init__.py  auth.py  client.py  config.py  profiles.py  settings.py  utils.py
tests/: test_auth.py  test_profiles.py
