[project]
name = "insighta"
version = "0.1.0"
description = "an internal initiative to transform the current system into a secure, accessible platform for real users."
authors = [
    {name = "Kaosi Anikwe",email = "anikwehenryasa@gmail.com"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "click (>=8.3.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insighta = "insighta:cli"
