[project]
name = "insighta"
version = "0.1.0"
description = "an internal initiative to transform the current system into a secure, accessible platform for real users."
authors = [
    {name = "Kaosi Anikwe",email = "anikwehenryasa@gmail.com"}
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "click (>=8.3.3,<9.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "rich-click (>=1.9.7,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
insighta = "insighta:cli"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.11.0,<1.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
